test/ppx_repr/deriver/errors/unsupported_type_extension.ml
type t = [%typ] [@@deriving repr]
